add struttura pagina

--- a/index.html
+++ b/index.html
@@ -7,6 +7,22 @@
     <title>Produzione orticola</title>
 </head>
 <body>
-    
+    <!-- intestazione della pagina -->
+    <header>
+
+    </header>
+    <!-- fine intestazione della pagina -->
+
+    <!-- inizio corpo della pagina -->
+    <main>
+
+    </main>
+    <!-- fine corpo della pagina -->
+
+    <!-- inizio footer -->
+    <footer>
+
+    </footer>
+    <!-- fine footer -->
 </body>
 </html>
